--- a/80cereals_clustering.ipynb
+++ b/80cereals_clustering.ipynb
@@ -2,18 +2,306 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8654aa35",
    "metadata": {},
    "source": [
     "Create clusters (K-means) and visualize them.\n",
     "\n",
     "Description of data https://www.kaggle.com/datasets/crawford/80-cereals?resource=download"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "import sklearn.cluster as cluster\n",
+    "\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "%load_ext nb_black"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_FOLDER = \"data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all = pd.read_csv(os.path.join(DATA_FOLDER, \"data_cereal.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content:\n",
+    "* Name: Name of cereal\n",
+    "* mfr: Manufacturer of cereal\n",
+    "    * A = American Home Food Products; G = General Mills; K = Kelloggs; N = Nabisco; P = Post; Q = Quaker Oats; R = Ralston Purina;\n",
+    "* type:\n",
+    "    * cold; hot\n",
+    "* calories: calories per serving\n",
+    "* protein: grams of protein\n",
+    "* fat: grams of fat\n",
+    "* sodium: milligrams of sodium\n",
+    "* fiber: grams of dietary fiber\n",
+    "* carbo: grams of complex carbohydrates\n",
+    "* sugars: grams of sugars\n",
+    "* potass: milligrams of potassium\n",
+    "* vitamins: vitamins and minerals - 0, 25, or 100, indicating the typical percentage of FDA recommended\n",
+    "* shelf: display shelf (1, 2, or 3, counting from the floor)\n",
+    "* weight: weight in ounces of one serving\n",
+    "* cups: number of cups in one serving\n",
+    "* rating: a rating of the cereals (Possibly from Consumer Reports?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_all.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete_list = [\"name\", \"mfr\", \"type\"]\n",
+    "# matrix_list = [item for item in list(df_all.columns) if item not in delete_list]\n",
+    "\n",
+    "matrix_list = [\n",
+    "    \"calories\",\n",
+    "    \"protein\",\n",
+    "    \"fat\",\n",
+    "    \"fiber\",\n",
+    "    \"carbo\",\n",
+    "    \"sugars\",\n",
+    "    \"shelf\",\n",
+    "    \"rating\",\n",
+    "]\n",
+    "\n",
+    "matrix_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.scatter_matrix(df_all, dimensions=matrix_list)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans = cluster.KMeans(n_clusters=2)\n",
+    "kmeans = kmeans.fit(df_all[[\"sugars\", \"rating\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"Cluster\"] = kmeans.labels_.astype(\"str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"Cluster\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.scatter(\n",
+    "    df_all,\n",
+    "    x=\"rating\",\n",
+    "    y=\"sugars\",\n",
+    "    color=\"Cluster\",\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try out single variate clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans_single = cluster.KMeans(n_clusters=2)\n",
+    "kmeans_single = kmeans_single.fit(df_all[[\"sugars\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "kmeans_single.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"sugar_cluster\"] = kmeans_single.labels_.astype(\"str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.histogram(df_all, x=\"sugars\", nbins=20, color=\"sugar_cluster\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans_single.cluster_centers_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all[\"zero\"] = 0\n",
+    "\n",
+    "fig = px.scatter(df_all, x=\"sugars\", y=\"zero\", color=\"sugar_cluster\")\n",
+    "\n",
+    "fig.add_scatter(x=kmeans_single.cluster_centers_, y=[[0], [0]])\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try out multiple nbins and a metric to find out a goodness of the fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -27,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
