Test evaluation of single vatiate clustering.

--- a/80cereals_clustering.ipynb
+++ b/80cereals_clustering.ipynb
@@ -103,30 +103,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete_list = [\"name\", \"mfr\", \"type\"]\n",
-    "# matrix_list = [item for item in list(df_all.columns) if item not in delete_list]\n",
+    "delete_list = [\"name\", \"mfr\", \"type\"]\n",
+    "matrix_list = [item for item in list(df_all.columns) if item not in delete_list]\n",
     "\n",
-    "matrix_list = [\n",
-    "    \"calories\",\n",
-    "    \"protein\",\n",
-    "    \"fat\",\n",
-    "    \"fiber\",\n",
-    "    \"carbo\",\n",
-    "    \"sugars\",\n",
-    "    \"shelf\",\n",
-    "    \"rating\",\n",
-    "]\n",
+    "# matrix_list = [\n",
+    "#     \"calories\",\n",
+    "#     \"protein\",\n",
+    "#     \"fat\",\n",
+    "#     \"fiber\",\n",
+    "#     \"carbo\",\n",
+    "#     \"sugars\",\n",
+    "#     \"shelf\",\n",
+    "#     \"rating\",\n",
+    "# ]\n",
     "\n",
     "matrix_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "px.scatter_"
    ]
   },
   {
@@ -144,11 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "kmeans = cluster.KMeans(n_clusters=2)\n",
-    "kmeans = kmeans.fit(df_all[[\"sugars\", \"rating\"]])"
+    "for col in matrix_list:\n",
+    "    fig = px.scatter(df_all, x=col, y=\"rating\")\n",
+    "    fig.show()"
    ]
   },
   {
@@ -157,7 +151,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans.cluster_centers_"
+    "# kmeans = cluster.KMeans(n_clusters=2)\n",
+    "# kmeans = kmeans.fit(df_all[[\"sugars\", \"rating\"]])"
    ]
   },
   {
@@ -166,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all[\"Cluster\"] = kmeans.labels_.astype(\"str\")"
+    "# kmeans.cluster_centers_"
    ]
   },
   {
@@ -175,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.info()"
+    "# df_all[\"Cluster\"] = kmeans.labels_.astype(\"str\")"
    ]
   },
   {
@@ -184,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all[\"Cluster\"].value_counts()"
+    "# df_all.info()"
    ]
   },
   {
@@ -193,13 +188,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(\n",
-    "    df_all,\n",
-    "    x=\"rating\",\n",
-    "    y=\"sugars\",\n",
-    "    color=\"Cluster\",\n",
-    ")\n",
-    "fig.show()"
+    "# df_all[\"Cluster\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig = px.scatter(\n",
+    "#     df_all,\n",
+    "#     x=\"rating\",\n",
+    "#     y=\"sugars\",\n",
+    "#     color=\"Cluster\",\n",
+    "# )\n",
+    "# fig.show()"
    ]
   },
   {
@@ -212,11 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "kmeans_single = cluster.KMeans(n_clusters=2)\n",
-    "kmeans_single = kmeans_single.fit(df_all[[\"sugars\"]])"
+    "# kmeans_single = cluster.KMeans(n_clusters=2)\n",
+    "# kmeans_single = kmeans_single.fit(df_all[[\"rating\"]])"
    ]
   },
   {
@@ -227,7 +233,7 @@
    },
    "outputs": [],
    "source": [
-    "kmeans_single.cluster_centers_"
+    "# kmeans_single.cluster_centers_"
    ]
   },
   {
@@ -236,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all[\"sugar_cluster\"] = kmeans_single.labels_.astype(\"str\")"
+    "# df_all[\"cluster\"] = kmeans_single.labels_.astype(\"str\")"
    ]
   },
   {
@@ -245,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all.head()"
+    "# df_all.head()"
    ]
   },
   {
@@ -256,8 +262,8 @@
    },
    "outputs": [],
    "source": [
-    "fig = px.histogram(df_all, x=\"sugars\", nbins=20, color=\"sugar_cluster\")\n",
-    "fig.show()"
+    "# fig = px.histogram(df_all, x=\"rating\", nbins=20, color=\"cluster\")\n",
+    "# fig.show()"
    ]
   },
   {
@@ -266,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans_single.cluster_centers_"
+    "# kmeans_single.cluster_centers_"
    ]
   },
   {
@@ -275,20 +281,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all[\"zero\"] = 0\n",
+    "# df_all[\"zero\"] = 0\n",
     "\n",
-    "fig = px.scatter(df_all, x=\"sugars\", y=\"zero\", color=\"sugar_cluster\")\n",
+    "# fig = px.scatter(df_all, x=\"sugars\", y=\"zero\", color=\"sugar_cluster\")\n",
     "\n",
-    "fig.add_scatter(x=kmeans_single.cluster_centers_, y=[[0], [0]])\n",
+    "# fig.add_scatter(x=kmeans_single.cluster_centers_, y=[[0], [0]])\n",
     "\n",
-    "fig.show()"
+    "# fig.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Try out multiple nbins and a metric to find out a goodness of the fit"
+    "## Try evaluate single variate clustering"
    ]
   },
   {
@@ -296,7 +302,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_list = []\n",
+    "\n",
+    "print(test_list)\n",
+    "\n",
+    "test_list.append(1)\n",
+    "\n",
+    "print(test_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "inertia = []\n",
+    "\n",
+    "for n in list(range(1, 10)):\n",
+    "    kmeans_single = cluster.KMeans(n_clusters=n)\n",
+    "    kmeans_single = kmeans_single.fit(df_all[[\"rating\"]])\n",
+    "\n",
+    "    print(f\"Number of clusters {n}, Inertia: {kmeans_single.inertia_}\")\n",
+    "    inertia.append(kmeans_single.inertia_)\n",
+    "\n",
+    "    df_all[\"cluster\"] = kmeans_single.labels_.astype(\"str\")\n",
+    "\n",
+    "    fig = px.histogram(df_all, x=\"rating\", nbins=20, color=\"cluster\")\n",
+    "    fig.show()\n",
+    "\n",
+    "    scat = px.scatter(df_all, x=\"rating\", y=\"rating\", color=\"cluster\")\n",
+    "    scat.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_inertia = pd.DataFrame(\n",
+    "    data=[list(range(1, 10)), inertia], index=[\"clusters\", \"inertia\"]\n",
+    ").T\n",
+    "\n",
+    "df_inertia[\"improvement\"] = (\n",
+    "    -df_inertia[\"inertia\"].diff() / df_inertia[\"inertia\"].shift()\n",
+    ")\n",
+    "\n",
+    "df_inertia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scat = px.scatter(df_inertia, x=\"clusters\", y=\"inertia\")\n",
+    "scat.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check K-means method for evaluation of the clustering"
+   ]
   }
  ],
  "metadata": {
