--- a/80cereals_clustering.ipynb
+++ b/80cereals_clustering.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4130db18",
    "metadata": {},
    "source": [
     "Create clusters (K-means) and visualize them.\n",
@@ -12,6 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4524ece9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6197d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31b8e4dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +49,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a29bcf3",
    "metadata": {},
    "source": [
     "## Content:\n",
@@ -71,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7222ff53",
    "metadata": {
     "scrolled": true
    },
@@ -82,6 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc700d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e805868d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f23d01a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,6 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8313e9ca",
    "metadata": {
     "scrolled": false
    },
@@ -135,6 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8bba1594",
    "metadata": {
     "scrolled": false
    },
@@ -148,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb3d741b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,6 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1a0799da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f94178e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f70caab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd58f6af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d72adbee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +225,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a91c1e3b",
    "metadata": {},
    "source": [
     "## Try out single variate clustering"
@@ -216,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d5304527",
    "metadata": {
     "scrolled": true
    },
@@ -228,6 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fde0bd75",
    "metadata": {
     "scrolled": true
    },
@@ -239,6 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53f48ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f10fea15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,6 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9935479",
    "metadata": {
     "scrolled": false
    },
@@ -269,6 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cde352bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c8fb76ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,6 +317,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4d1c4f8",
    "metadata": {},
    "source": [
     "## Try evaluate single variate clustering"
@@ -300,6 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90cf5e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c8e3687",
    "metadata": {
     "scrolled": false
    },
@@ -341,6 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4360d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "000c5d5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,15 +397,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d124ac8",
    "metadata": {},
    "source": [
     "# Check K-means method for evaluation of the clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3a23391",
+   "metadata": {},
+   "source": [
+    "## Cluster the data [Juraj]\n",
+    "* Using K-Means (Univariate, Multivariate)\n",
+    "* Evaluate quality of the clustering (inertia)\n",
+    "* Visualize the clustering"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
