--- a/80cereals_clustering.ipynb
+++ b/80cereals_clustering.ipynb
@@ -113,20 +113,7 @@
    "outputs": [],
    "source": [
     "delete_list = [\"name\", \"mfr\", \"type\"]\n",
-    "matrix_list = [item for item in list(df_all.columns) if item not in delete_list]\n",
-    "\n",
-    "# matrix_list = [\n",
-    "#     \"calories\",\n",
-    "#     \"protein\",\n",
-    "#     \"fat\",\n",
-    "#     \"fiber\",\n",
-    "#     \"carbo\",\n",
-    "#     \"sugars\",\n",
-    "#     \"shelf\",\n",
-    "#     \"rating\",\n",
-    "# ]\n",
-    "\n",
-    "matrix_list"
+    "matrix_list = [item for item in list(df_all.columns) if item not in delete_list]"
    ]
   },
   {
@@ -151,9 +138,9 @@
    },
    "outputs": [],
    "source": [
-    "for col in matrix_list:\n",
-    "    fig = px.scatter(df_all, x=col, y=\"rating\")\n",
-    "    fig.show()"
+    "# for col in matrix_list:\n",
+    "#     fig = px.scatter(df_all, x=\"rating\", y=col)\n",
+    "#     fig.show()"
    ]
   },
   {
@@ -163,8 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# kmeans = cluster.KMeans(n_clusters=2)\n",
-    "# kmeans = kmeans.fit(df_all[[\"sugars\", \"rating\"]])"
+    "kmeans = cluster.KMeans(n_clusters=2)\n",
+    "kmeans = kmeans.fit(df_all[[\"sugars\", \"rating\"]])"
    ]
   },
   {
@@ -181,10 +168,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1f94178e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# df_all[\"Cluster\"] = kmeans.labels_.astype(\"str\")"
+    "df_all[\"Cluster\"] = kmeans.labels_.astype(\"str\")"
    ]
   },
   {
@@ -214,13 +203,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig = px.scatter(\n",
-    "#     df_all,\n",
-    "#     x=\"rating\",\n",
-    "#     y=\"sugars\",\n",
-    "#     color=\"Cluster\",\n",
-    "# )\n",
-    "# fig.show()"
+    "fig = px.scatter(\n",
+    "    df_all,\n",
+    "    x=\"rating\",\n",
+    "    y=\"sugars\",\n",
+    "    color=\"Cluster\",\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20a88965",
+   "metadata": {},
+   "source": [
+    "# Intro:\n",
+    "* minimization of inertia (within-cluster sum-of-squares criterion)\n",
+    "$$ \\sum_{n=0}^{n} \\min_{\\mu_j \\in C}(\\|x-\\mu_j\\|^2) $$\n",
+    "* initiation of clusters:\n",
+    "    * random initial centroids \n",
+    "    * k-means++ - distant initial centroids\n",
+    "* drawback\n",
+    "    * algo assumes convex, isotropic clusters, works poorly on irregular shapes of clusters\n",
+    "    * “curse of dimensionality” - Inertia is not a normalized metric, tends to become inflated in multiple dimensions $ \\Rightarrow $ PCA"
    ]
   },
   {
@@ -228,115 +233,19 @@
    "id": "a91c1e3b",
    "metadata": {},
    "source": [
-    "## Try out single variate clustering"
+    "## Evaluate single variate clustering\n",
+    "* find a method for clustering evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5304527",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# kmeans_single = cluster.KMeans(n_clusters=2)\n",
-    "# kmeans_single = kmeans_single.fit(df_all[[\"rating\"]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fde0bd75",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# kmeans_single.cluster_centers_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53f48ef8",
+   "id": "1b4bb512",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_all[\"cluster\"] = kmeans_single.labels_.astype(\"str\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f10fea15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_all.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9935479",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# fig = px.histogram(df_all, x=\"rating\", nbins=20, color=\"cluster\")\n",
-    "# fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cde352bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# kmeans_single.cluster_centers_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8fb76ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_all[\"zero\"] = 0\n",
-    "\n",
-    "# fig = px.scatter(df_all, x=\"sugars\", y=\"zero\", color=\"sugar_cluster\")\n",
-    "\n",
-    "# fig.add_scatter(x=kmeans_single.cluster_centers_, y=[[0], [0]])\n",
-    "\n",
-    "# fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4d1c4f8",
-   "metadata": {},
-   "source": [
-    "## Try evaluate single variate clustering"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90cf5e2a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_list = []\n",
-    "\n",
-    "print(test_list)\n",
-    "\n",
-    "test_list.append(1)\n",
-    "\n",
-    "print(test_list)"
+    "df_cluster = df_all.copy()\n",
+    "df_cluster[\"zero\"] = 0"
    ]
   },
   {
@@ -348,21 +257,22 @@
    },
    "outputs": [],
    "source": [
+    "clusters = 10\n",
     "inertia = []\n",
     "\n",
-    "for n in list(range(1, 10)):\n",
+    "for n in list(range(1, clusters)):\n",
     "    kmeans_single = cluster.KMeans(n_clusters=n)\n",
-    "    kmeans_single = kmeans_single.fit(df_all[[\"rating\"]])\n",
+    "    kmeans_single = kmeans_single.fit(df_cluster[[\"rating\"]])\n",
     "\n",
     "    print(f\"Number of clusters {n}, Inertia: {kmeans_single.inertia_}\")\n",
     "    inertia.append(kmeans_single.inertia_)\n",
     "\n",
-    "    df_all[\"cluster\"] = kmeans_single.labels_.astype(\"str\")\n",
+    "    df_cluster[\"cluster\"] = kmeans_single.labels_.astype(\"str\")\n",
     "\n",
-    "    fig = px.histogram(df_all, x=\"rating\", nbins=20, color=\"cluster\")\n",
+    "    fig = px.histogram(df_cluster, x=\"rating\", nbins=20, color=\"cluster\")\n",
     "    fig.show()\n",
     "\n",
-    "    scat = px.scatter(df_all, x=\"rating\", y=\"rating\", color=\"cluster\")\n",
+    "    scat = px.scatter(df_cluster, x=\"rating\", y=\"zero\", color=\"cluster\")\n",
     "    scat.show()"
    ]
   },
@@ -374,7 +284,7 @@
    "outputs": [],
    "source": [
     "df_inertia = pd.DataFrame(\n",
-    "    data=[list(range(1, 10)), inertia], index=[\"clusters\", \"inertia\"]\n",
+    "    data=[list(range(1, clusters)), inertia], index=[\"clusters\", \"inertia\"]\n",
     ").T\n",
     "\n",
     "df_inertia[\"improvement\"] = (\n",
@@ -392,7 +302,47 @@
    "outputs": [],
    "source": [
     "scat = px.scatter(df_inertia, x=\"clusters\", y=\"inertia\")\n",
+    "scat.show()\n",
+    "\n",
+    "impro = px.scatter(df_inertia, x=\"clusters\", y=\"improvement\")\n",
+    "impro.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fa41702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_clusters = 6\n",
+    "\n",
+    "kmeans_single = cluster.KMeans(n_clusters=n_clusters)\n",
+    "kmeans_single = kmeans_single.fit(df_all[[\"rating\"]])\n",
+    "\n",
+    "print(f\"Number of clusters {n_clusters}, Inertia: {kmeans_single.inertia_}\")\n",
+    "\n",
+    "df_cluster[\"cluster\"] = kmeans_single.labels_.astype(\"str\")\n",
+    "\n",
+    "fig = px.histogram(df_cluster, x=\"rating\", nbins=20, color=\"cluster\")\n",
+    "fig.show()\n",
+    "\n",
+    "scat = px.scatter(df_cluster, x=\"rating\", y=\"zero\", color=\"cluster\")\n",
     "scat.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef071a15",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for cl, df in df_cluster.groupby(\"cluster\"):\n",
+    "    display(f\"Cluster #{cl}\")\n",
+    "    display(df.describe())"
    ]
   },
   {
